test/trivial/bradc/localConfig.good
localConfig.chpl:3: In fcuntion 'main':
localConfig.chpl:4: error: configuration variables only legal at module scope
